--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "qrcode": "^1.5.3",
     "uuid": "^9.0.0"
   }
